--- a/app/templates/payout_settings.html
+++ b/app/templates/payout_settings.html
@@ -19,7 +19,7 @@
     </p>
 
     <div class="d-flex flex-wrap gap-2 align-items-center">
-      <!-- رابط GET بدل فورم -->
+      <!-- نستخدم GET (يدعمه الراوتر) -->
       <a class="btn btn-primary" href="/payout/connect/start">
         <i class="bi bi-plug"></i> ابدأ الربط الآن
       </a>
